{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 369,
  "lineage": "d156d8be-3d58-ba3f-17e4-d5afcab86005",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd5a65d1e7673e3d",
            "arn": "arn:aws:ec2:us-west-1:037302670564:elastic-ip/eipalloc-0bd5a65d1e7673e3d",
            "association_id": "eipassoc-00aa58704ee80b677",
            "domain": "vpc",
            "id": "eipalloc-0bd5a65d1e7673e3d",
            "network_border_group": "us-west-1",
            "network_interface": "eni-028bdc0dbb63a7293",
            "private_dns": "ip-10-0-100-129.us-west-1.compute.internal",
            "private_ip": "10.0.100.129",
            "public_dns": "ec2-54-219-113-202.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.113.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "crm-prod-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-nat-eip-1",
              "Project": "crm"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091b7649c7d29619a",
            "arn": "arn:aws:ec2:us-west-1:037302670564:elastic-ip/eipalloc-091b7649c7d29619a",
            "association_id": "eipassoc-00577937887a52a23",
            "domain": "vpc",
            "id": "eipalloc-091b7649c7d29619a",
            "network_border_group": "us-west-1",
            "network_interface": "eni-03ec02e6ebc0a103b",
            "private_dns": "ip-10-0-101-246.us-west-1.compute.internal",
            "private_ip": "10.0.101.246",
            "public_dns": "ec2-54-215-205-54.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.205.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "crm-prod-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-nat-eip-2",
              "Project": "crm"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ff48e800d3550ab",
            "arn": "arn:aws:ec2:us-west-1:037302670564:instance/i-02dd262ea486efa53",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "crm-prod-bastion-profile",
            "id": "i-02dd262ea486efa53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "crm-prod-mysql-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00769a18920ec0add",
            "private_dns": "ip-10-0-100-29.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.29",
            "public_dns": "ec2-54-193-94-64.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.94.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "crm"
                },
                "throughput": 125,
                "volume_id": "vol-03732d95477651da5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d11cbd5be4cdc7f",
            "tags": {
              "Name": "crm-prod-bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-bastion",
              "Project": "crm",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-02a37556d1970ec43"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_key_pair.mysql",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.bastion_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe9bdd11670668e",
            "arn": "arn:aws:ec2:us-west-1:037302670564:instance/i-0e9f68d762d969bab",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-1:037302670564:key/28dfcf2b-e056-45a1-a584-43f7fd03f4a5",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "crm"
                },
                "throughput": 125,
                "volume_id": "vol-0701f5cd1ceddb8bb",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "crm-prod-mysql-profile",
            "id": "i-0e9f68d762d969bab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "crm-prod-mysql-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042ffa9a8883f50e7",
            "private_dns": "ip-10-0-1-20.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-1:037302670564:key/28dfcf2b-e056-45a1-a584-43f7fd03f4a5",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "crm"
                },
                "throughput": 125,
                "volume_id": "vol-0e33e82e1381f61df",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04384e192254fd698",
            "tags": {
              "Name": "crm-prod-mysql-master",
              "Role": "mysql-master"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-mysql-master",
              "Project": "crm",
              "Role": "mysql-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0518aa1040a256346",
              "sg-0aea14332fff626c6"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.mysql_ssm",
            "aws_iam_role.mysql",
            "aws_internet_gateway.main",
            "aws_key_pair.mysql",
            "aws_nat_gateway.main",
            "aws_security_group.mysql",
            "aws_security_group.mysql_ssh",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe9bdd11670668e",
            "arn": "arn:aws:ec2:us-west-1:037302670564:instance/i-072d280a315350e74",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-1:037302670564:key/28dfcf2b-e056-45a1-a584-43f7fd03f4a5",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "crm"
                },
                "throughput": 125,
                "volume_id": "vol-0a6766fb6aef326d7",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "crm-prod-mysql-profile",
            "id": "i-072d280a315350e74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "crm-prod-mysql-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d751cc4515848798",
            "private_dns": "ip-10-0-1-34.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-1:037302670564:key/28dfcf2b-e056-45a1-a584-43f7fd03f4a5",
                "tags_all": {
                  "Environment": "prod",
                  "ManagedBy": "Terraform",
                  "Project": "crm"
                },
                "throughput": 125,
                "volume_id": "vol-05f4029db3c54b6a7",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04384e192254fd698",
            "tags": {
              "Name": "crm-prod-mysql-replica-1",
              "Role": "mysql-replica"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-mysql-replica-1",
              "Project": "crm",
              "Role": "mysql-replica"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0518aa1040a256346",
              "sg-0aea14332fff626c6"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.mysql_ssm",
            "aws_iam_role.mysql",
            "aws_instance.mysql_master",
            "aws_internet_gateway.main",
            "aws_key_pair.mysql",
            "aws_nat_gateway.main",
            "aws_security_group.mysql",
            "aws_security_group.mysql_ssh",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:internet-gateway/igw-0a00ef9915bb927ef",
            "id": "igw-0a00ef9915bb927ef",
            "owner_id": "037302670564",
            "tags": {
              "Name": "crm-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-igw",
              "Project": "crm"
            },
            "vpc_id": "vpc-06796764869040ce1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd5a65d1e7673e3d",
            "association_id": "eipassoc-00aa58704ee80b677",
            "connectivity_type": "public",
            "id": "nat-0f203e942bf5f3172",
            "network_interface_id": "eni-028bdc0dbb63a7293",
            "private_ip": "10.0.100.129",
            "public_ip": "54.219.113.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d11cbd5be4cdc7f",
            "tags": {
              "Name": "crm-prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-nat-1",
              "Project": "crm"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091b7649c7d29619a",
            "association_id": "eipassoc-00577937887a52a23",
            "connectivity_type": "public",
            "id": "nat-03b8715fad471d6d9",
            "network_interface_id": "eni-03ec02e6ebc0a103b",
            "private_ip": "10.0.101.246",
            "public_ip": "54.215.205.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8b8233d3b8f7f19",
            "tags": {
              "Name": "crm-prod-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-nat-2",
              "Project": "crm"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:route-table/rtb-027efbec3f564ddca",
            "id": "rtb-027efbec3f564ddca",
            "owner_id": "037302670564",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f203e942bf5f3172",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crm-prod-private-rt-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-private-rt-1",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:route-table/rtb-072aab01180139215",
            "id": "rtb-072aab01180139215",
            "owner_id": "037302670564",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b8715fad471d6d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crm-prod-private-rt-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-private-rt-2",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:route-table/rtb-0b13802e8e5b1e0ec",
            "id": "rtb-0b13802e8e5b1e0ec",
            "owner_id": "037302670564",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a00ef9915bb927ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crm-prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-public-rt",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1d152949c0ab418",
            "route_table_id": "rtb-027efbec3f564ddca",
            "subnet_id": "subnet-04384e192254fd698"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00baee3ea5f49eecc",
            "route_table_id": "rtb-072aab01180139215",
            "subnet_id": "subnet-033971c62ad37e0c6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0582da031569e1ae9",
            "route_table_id": "rtb-0b13802e8e5b1e0ec",
            "subnet_id": "subnet-06d11cbd5be4cdc7f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d5146c259c44557",
            "route_table_id": "rtb-0b13802e8e5b1e0ec",
            "subnet_id": "subnet-0c8b8233d3b8f7f19"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:security-group/sg-02a37556d1970ec43",
            "description": "SSH access for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a37556d1970ec43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "crm-prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "037302670564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "crm-prod-bastion-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-bastion-sg",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:security-group/sg-0aea14332fff626c6",
            "description": "Security group for MySQL master and replicas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aea14332fff626c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL replication within cluster",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "crm-prod-mysql-sg",
            "name_prefix": "",
            "owner_id": "037302670564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "crm-prod-mysql-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-mysql-sg",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:security-group/sg-0518aa1040a256346",
            "description": "SSH access for MySQL instances (attach to bastion or restricted)",
            "egress": [],
            "id": "sg-0518aa1040a256346",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "crm-prod-mysql-ssh-sg",
            "name_prefix": "",
            "owner_id": "037302670564",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "crm-prod-mysql-ssh-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-mysql-ssh-sg",
              "Project": "crm"
            },
            "timeouts": null,
            "vpc_id": "vpc-06796764869040ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:subnet/subnet-04384e192254fd698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04384e192254fd698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037302670564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crm-prod-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-private-1",
              "Project": "crm"
            },
            "vpc_id": "vpc-06796764869040ce1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:subnet/subnet-033971c62ad37e0c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033971c62ad37e0c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037302670564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crm-prod-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-private-2",
              "Project": "crm"
            },
            "vpc_id": "vpc-06796764869040ce1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:subnet/subnet-06d11cbd5be4cdc7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d11cbd5be4cdc7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037302670564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crm-prod-public-1",
              "kubernetes.io/cluster/crm-prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-public-1",
              "Project": "crm",
              "kubernetes.io/cluster/crm-prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06796764869040ce1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:subnet/subnet-0c8b8233d3b8f7f19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8b8233d3b8f7f19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037302670564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crm-prod-public-2",
              "kubernetes.io/cluster/crm-prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-public-2",
              "Project": "crm",
              "kubernetes.io/cluster/crm-prod-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06796764869040ce1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:037302670564:vpc/vpc-06796764869040ce1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0918b01ad94270965",
            "default_route_table_id": "rtb-04157c55241048a9a",
            "default_security_group_id": "sg-06caa2a49911ed896",
            "dhcp_options_id": "dopt-06d089eb4d0e64980",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06796764869040ce1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04157c55241048a9a",
            "owner_id": "037302670564",
            "tags": {
              "Name": "crm-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "crm-prod-vpc",
              "Project": "crm"
            }
          }
        }
      ]
    }
  ]
}